# sdk

assemblyscript/: README.md  index.ts  package.json
assemblyscript/protobuf/: asterai.proto
asterai-rs/: Cargo.toml
cli/: .gitignore  README.md  package.json
cli/asterai-init-plugin/: .gitignore  package.json  package.wit  plugin.ts  plugin.wit  tsconfig.json
cli/init/rust/: .gitignore  Cargo.toml  build.sh  deploy.sh  plugin.wit
cli/init/rust/src/: bindings.rs  lib.rs
cli/init/typescript/: package.json  plugin.ts  plugin.wit  tsconfig.json
cli/src/: const.ts
cli/src/commands/: codegen.ts  deploy.ts  init.ts  pkg.ts  query.ts
examples/dexscreener/: plugin.asterai.proto
examples/math/: plugin.asterai.proto
examples/semantic-search/: package.json  plugin.ts
go/: buffer.go  build.sh  env.go  go.mod  go.sum  http.go  imports.go  kv.go  log.go  main.go  sleep.go
go/protobuf/: asterai.pb.go  generate.sh
plugin-examples/math/: package.json  package.wit  pkg_local.sh  plugin.ts  tsconfig.json
sdk/: index.ts  package.json
sdk/protobuf/: asterai.proto
