[package]
name = "plugin"
# Note that this version does not matter for the plugin,
# only the one in plugin.wit is used.
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "your-username:plugin"

[package.metadata.component.dependencies]
